fix: update font sizes in LoginPage and index styles for better readability

--- a/src/features/LoginPage.css
+++ b/src/features/LoginPage.css
@@ -13,7 +13,7 @@
   background-color: var(--surface);
   border-radius: 6px;
   padding: 2rem;
-  width: 30vw;
+  width: calc(30vw - 4rem);
   height: 60vh;
   display: flex;
   flex-direction: column;
@@ -34,21 +34,18 @@
   font-size: 16px;
 }
 
-.helper-container .checkbox {
-  min-height: 0;
-  height: 14px;
-  aspect-ratio: 1;
-  padding: 0;
-  margin: 0;
-  width: fit-content;
-}
-
 .remember-me {
   display: flex;
-  gap: 8px;
   align-items: center;
   justify-content: start;
-  width: fit-content;
+  flex: 1;
+  gap: 10px;
+}
+
+.remember-me .checkbox {
+  height: 14px;
+  width: 14px;
+  aspect-ratio: 1;
 }
 
 .helper-container {
@@ -56,6 +53,11 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+}
+
+.helper-container a {
+  flex: 1;
+  text-align: end;
 }
 
 .login-container button {
@@ -167,10 +169,12 @@ body.dark .login-container .logo {
   content: url("/TLK_BIG_REVERSE.svg");
 }
 
-.error-msg {
+.error-msg,
+.success-msg {
   width: 100%;
   height: 100%;
   min-height: 50px;
+  max-height: 60px;
   background-color: rgb(var(--error-rgb), 0.2);
   color: var(--error);
   text-align: center;
@@ -181,18 +185,24 @@ body.dark .login-container .logo {
   gap: 0.5rem;
 }
 
+.success-msg {
+  background-color: rgb(var(--success-rgb), 0.2);
+  color: var(--success);
+}
+
 @media screen and (max-width: 768px) {
   .login-card {
     background-color: var(--surface);
     border-radius: 6px;
-    padding: 1rem;
-    width: 75vw;
-    height: 65vh;
+    padding: 2rem;
+    width: calc(70vw - 2rem);
+    height: fit-content;
+    max-height: 65vh;
   }
 
   .email-field input::placeholder,
   .password-field input::placeholder {
-    font-size: 10px;
+    font-size: 14px;
   }
 
   .login-container .logo {
